[web] Fixed visual bug with disappearing buttons
Summary:
Fixing: https://linear.app/comm/issue/ENG-2057/userlist-buttons-are-cutoff-when-there-are-a-lot-of-users
With many users and short browser window, buttons were disappearing.
Fixed by using flexbox.

{F260173}

Test Plan: Video above.

Reviewers: tomek, kamil, michal, atul

Reviewed By: tomek

Subscribers: ashoat, atul, michal, kamil, tomek

Differential Revision: https://phab.comm.dev/D5724

--- a/web/settings/relationship/user-list.css
+++ b/web/settings/relationship/user-list.css
@@ -1,6 +1,7 @@
 .container {
   overflow: auto;
-  flex: 1;
+  flex-grow: 1;
+  flex-basis: 120px;
 }
 
 .noScroll {
